Fix image overflow

--- a/style/style.css
+++ b/style/style.css
@@ -88,6 +88,8 @@ nav a:hover {
 
 .all-slides{
     display: none;
+    max-height: 100%;
+    max-width: 100%;
     margin: 0 0 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
